Finish basic stucture and content

--- a/index.html
+++ b/index.html
@@ -5,9 +5,17 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Odin Recipes</title>
+  <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
   <h1>Odin Recipes</h1>
-  <a href="recipes/lemontart.html">The recipe for the amazing Rosa's Lemon Tart !</a>
+  <ul>
+    <li>  <a href="recipes/lemontart.html">The recipe for the amazing Cucina Popolare's Lemon Tart !</a>
+    </li>
+    <li>  <a href="/recipes/dukkah.html">Best Dukkah ever</a>
+    </li>
+    <li>  <a href="/recipes/ketomuffin.html">Best snack for your health</a>
+    </li>
+  </ul>
 </body>
 </html>
