--- a/recipes/ketomuffin.html
+++ b/recipes/ketomuffin.html
@@ -4,26 +4,41 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Lemon Tart</title>
+  <title>Keto Muffin</title>
   <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
   <div>
-    <h1>Lemon Tart</h1>
-    <img class="lemontartimg" src="../img/max-griss-7xWaqDV9iKo-unsplash.jpg" alt="picture of the lemon pie">
+    <h1>Keto Vegetable Muffins for Breakfast or Dinner</h1>
+    <img class="lemontartimg" src="../img/savory-muffins-recipe.webp" alt="picture of the lemon pie">
     <h2>Description</h2>
     <div class="description">
       <p>
-        It is believed that the lemon custard that came to be known as lemon curd was first prepared in England by Protestant Quakers during the 18th century and that the recipe travelled to North America in 1774 with the Quakers or with the Shakers, a breakaway sect of the Quakers.
-      A Shaker lemon pie recipe with a pastry base still exists today, but this pie is made with finely shredded lemons, including the peel, and does not usually have a cream filling because the early settlers were very poor.
+      A blend of eggs, coconut flour, and broccoli may sound unimpressive, but I assure you it is anything but that. This savory keto veggie muffin recipe with blow you away!
+    </p>
+    <p>
+      Do you have a picky eater or toddler in the house? Maybe your toddler is a picky eater!
+    </p>
+    <p>
+      I’ve been there! You can read about my journey to help children eat healthy and tips to get kids to eat healthy foods on the blog here. Laying down the groundwork is hard when children are little but so worth it once that foundation sets.
+    </p>
+    <p>
+    These savory muffins check so many boxes for us moms:
+  </p>  
+      <ul>
+        <li> Gluten-free</li>
+        <li>Dairy-free</li>
+        <li>Low-carb and keto</li>
+        <li>Hidden vegetables</li>
+        <li>Easy!</li>
+        <li>Super tasty</li>
+      </ul>
+      <p> If that isn’t enough, you can serve these in many ways. For example, I like served warm as breakfast muffins, but my husband eats them as a side dish with dinner, and my daughter chooses them as a healthy after school snack.
       </p>
       <p>
-        According to some historians, the first recipe for lemon pie with a pastry base and lemon custard filling was written down in 1806 by Elizabeth Goodwell, an American cook in Philadelphia. Mrs Goodwell ran a pastry shop, where she also organised cookery lessons. One of her signature desserts was a tart filled with a rich lemon custard. The story goes that, as she had to use so many egg yolks for the custard, one day she decided to use the egg whites to make a meringue topping for the lemon pie and thus was the lemon meringue pie born. But this is another fascinating story…
+        When it comes down to it, when are muffins not allowed? You can’t go wrong with this great recipe!
       </p>
-      <p>
-        The pie gained great local success and was popularised across the USA, particularly by Mrs Goodwell’s former student Eliza Leslie who incorporated many of Mrs Goodwell’s recipes into her own printed cookbook. Other food historians, however, maintain that the lemon meringue pie was invented in Europe by the Swiss pastry chef Alexander Frehse.
-      </p>
-    </div>
+      </div>
     <h2>Ingredients</h2>
    <ul>
     <h3>    For the pastry (pie dough)</h3>
