Add link to home page

--- a/recipes/dukkah.html
+++ b/recipes/dukkah.html
@@ -44,5 +44,7 @@
     <li>Season with salt, then use as desired.</li>
   </ol>
   </div>
+  <a href="../index.html"> Main page</a>
+
 </body>
 </html>
